# langsmith-evals-showcase

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: evals.yml
docs/: EVALUATION_STRATEGY.md  LANGSMITH_API_REFERENCE.md  ONLINE_AND_HUMAN_EVAL.md
docs/superpowers/specs/: 2026-06-16-langsmith-evals-showcase-design.md
src/evals_showcase/: __init__.py  annotation.py  cli.py  config.py  datasets.py  embeddings.py  models.py  online.py
src/evals_showcase/evaluators/: __init__.py  code.py  heuristic.py  judges.py  summary.py  trajectory.py
src/evals_showcase/scenarios/: __init__.py
src/evals_showcase/scenarios/agent/: __init__.py  app.py  data.jsonl  experiment.py
src/evals_showcase/scenarios/classify/: __init__.py  app.py  data.jsonl  experiment.py
src/evals_showcase/scenarios/extract/: __init__.py  app.py  data.jsonl  experiment.py
src/evals_showcase/scenarios/generate/: __init__.py  app.py  data.jsonl  experiment.py  prompts.py
src/evals_showcase/scenarios/rag/: __init__.py  app.py  corpus.jsonl  data.jsonl  experiment.py  retriever.py
tests/: _gate_helpers.py  test_agent.py  test_agent_gate.py  test_classify_gate.py  test_code_evaluator.py  test_cross_cutting.py  test_evaluators.py  test_extract_gate.py  test_generate_gate.py  test_judges.py  test_rag_gate.py  test_retrieval.py  test_rubric_pairwise.py
